# foton

./: .gitignore  CMakeLists.txt  Initialize.py  LICENSE  README.md  icon  imgui.ini
Shaders/Internal/: Default.frag.glsl  Default.frag.hlsl  FullScreen.vert.glsl  FullScreen.vert.hlsl
Source/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  Device.cpp  Device.h  FileExplorer.cpp  FileExplorer.h  Image.cpp  Image.h  ImageFile.h  Main.cpp  Precompiled.h  Swapchain.cpp  Swapchain.h  UserInterface.cpp  UserInterface.h  Window.cpp  Window.h
Source/Compiler/: ShaderCompiler.cpp  ShaderCompiler.h  ShaderFileIncluder.cpp  ShaderFileIncluder.h  ShaderReflect.cpp  ShaderReflect.h  ShaderResourceLimits.hpp
Source/Core/: Binding.hpp  Buffer.cpp  Buffer.h  CombinedImageSampler.cpp  CombinedImageSampler.h  CommandBuffer.cpp  CommandBuffer.h  Descriptor.hpp  DescriptorSet.cpp  DescriptorSet.h  Device.cpp  Device.h  Image.cpp  Image.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Resource.hpp  ResourceContainer.cpp  ResourceContainer.h  Sampler.cpp  Sampler.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h  UniformBuffer.cpp  UniformBuffer.h
Source/Shader/: Shader.cpp  Shader.h  ShaderCommon.hpp  ShaderCompiler.cpp  ShaderCompiler.h  ShaderFile.cpp  ShaderFile.h  ShaderFileIncluder.cpp
Source/Utility/: Assert.hpp  DefaultShader.cpp  DefaultShader.h  FileExplorer.cpp  FileExplorer.h  FilePath.cpp  FilePath.h  ImageFile.cpp  ImageFile.h  Log.cpp  Log.h  ShaderFile.cpp  ShaderFile.h
Source/Vulkan/: Buffer.cpp  Device.cpp  Image.cpp  Pipeline.cpp  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
src/: Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderFile.cpp  ShaderFileIncluder.cpp  ShaderFileIncluder.h  ShaderReflect.cpp  ShaderReflect.h  main.cpp  pch.h  shader_compiler.cpp  shader_compiler.h
src/shaders/: default.frag.glsl  default.frag.hlsl  fullscreen.vert
src/utils/: assert.hpp  log.cpp  log.h  profile.hpp
